--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "testing:babel": "babel-node babel-test.js"
+    "start": "babel-node server/index.jsx"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -16,5 +16,10 @@
     "babel-regenerator-runtime": "^6.5.0",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "express-yields": "^1.1.2",
+    "fs-extra": "^7.0.0"
   }
 }
