--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "express": "^4.16.4",
     "express-yields": "^1.1.2",
     "fs-extra": "^7.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.11",
     "optimist": "^0.6.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
